Accelerate greedy keyword searches
Recognize greedy whole-input wrappers around word-bounded ASCII case-insensitive keyword alternatives and resolve their rightmost capture in a single backward scan. Keep default case-insensitive comparisons ASCII-only in both keyword paths.

Part of #584

Fixes #585